--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <b>* DSE2022CP1Q1</b>
               </p>
               <div Class="img QBox year2022Q1QBox EEQs" id="DSE2022CP1Q1EE">
-                <img src="Questions/DSE2022CP1Q1.EE.jpg" width="350">
+                <img src="questions/DSE2022CP1Q1.EE.jpg" width="350">
               </div>
               <div Class="img QBox year2022Q1QBox CEQs" id="DSE2022CP1Q1CE">
                 <img src="Questions/DSE2022CP1Q1.CE.jpg" width="350">
